kill mathbb typo

--- a/sigma.tex
+++ b/sigma.tex
@@ -1016,7 +1016,7 @@ For \(N > 1\), this map is an embedding. \qed
 \end{theorem}
 
 \begin{example}
-In the case of \(N = 2\), the four functions involved are \[\theta_{q^2}^{0,0}, \theta_{q^2}^{0,1/2}, \theta_{q^2}^{1/2,0}, \theta_{q^2}^{1/2,1/2},\] and we record their zero loci in \Cref{ThetaFunctionsTable}.  The image of \(f_{(2)}\) in \(\P^{2^2 - 1}(\C)\) is cut out by the equations\footnote{This amounts to a projectivization of the embedding \(S^1 \times \S^1 \to \R^2 \times \R^2\).}
+In the case of \(N = 2\), the four functions involved are \[\theta_{q^2}^{0,0}, \theta_{q^2}^{0,1/2}, \theta_{q^2}^{1/2,0}, \theta_{q^2}^{1/2,1/2},\] and we record their zero loci in \Cref{ThetaFunctionsTable}.  The image of \(f_{(2)}\) in \(\P^{2^2 - 1}(\C)\) is cut out by the equations\footnote{This amounts to a projectivization of the embedding \(S^1 \times S^1 \to \R^2 \times \R^2\).}
 \begin{align*}
 A^2 x_0^2 & = B^2 x_1^2 + C^2 x_2^2, &
 A^2 x_3^2 + B^2 x_2^2 & = C^2 x_1^2,
