--- a/powerops.tex
+++ b/powerops.tex
@@ -1046,10 +1046,10 @@ execute at end picture={
     \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:1.5)}]Cj) {\scriptsize \(A\)};
 }]
 & & & \widehat L_1 \S \arrow{rr} \arrow[equal]{d} & & KO_p \arrow[equal]{d} \arrow["1 - \psi^c"]{rr} & & KO_p \arrow[equal]{d} \\
-& & & \widehat L_1 \gl_1 \S \arrow{rr} & & \widehat L_1 Cj \arrow[densely dotted, "B'" near start]{dd} \arrow{rr} & & \widehat L_1 b\spin \\
-\spin \arrow{rr}[description]{j} \arrow{rrdd} & & |[alias=glS]| \gl_1 \S \arrow{rr} \arrow{dd} \arrow{ru} \arrow{rrdd}[description]{\gl_1 \eta_{KO_p}} & & |[alias=Cj]| Cj \arrow{ru} \arrow{dd}[description]{B} \arrow[crossing over]{rr} & & b\spin \arrow{ru} \arrow[crossing over]{rr} \arrow[bend left=20]{rrdd} & & b\gl_1 \S \arrow{dd} \\
-& & & & & \widehat L_1 \gl_1 KO_p \arrow{rr} & & \Q \otimes \widehat L_1 \gl_1 KO_p \\
-& & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{rr} & & |[alias=glKOp]| \gl_1 KO_p \arrow{ru} \arrow{rr} & & \Q \otimes \gl_1 KO_p \arrow{ru} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over]{uu}[description]{C} & & \Q/\Z \otimes \gl_1 KO_p.
+& & & \widehat L_1 \gl_1 \S \arrow{rr} & & \widehat L_1 Cj \arrow[very thick, "B'" near start]{dd} \arrow[very thick]{rr} & & \widehat L_1 b\spin \\
+\spin \arrow{rr}[description]{j} \arrow{rrdd} & & |[alias=glS]| \gl_1 \S \arrow{rr} \arrow{dd} \arrow{ru} \arrow{rrdd}[description]{\gl_1 \eta_{KO_p}} & & |[alias=Cj]| Cj \arrow{ru} \arrow{dd}[description]{B} \arrow[crossing over]{rr} & & b\spin \arrow[very thick]{ru} \arrow[crossing over]{rr} \arrow[bend left=20]{rrdd} & & b\gl_1 \S \arrow{dd} \\
+& & & & & \widehat L_1 \gl_1 KO_p \arrow[very thick]{rr} & & \Q \otimes \widehat L_1 \gl_1 KO_p \\
+& & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{rr} & & |[alias=glKOp]| \gl_1 KO_p \arrow{ru} \arrow{rr} & & \Q \otimes \gl_1 KO_p \arrow[very thick]{ru} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over]{uu}[description]{C} & & \Q/\Z \otimes \gl_1 KO_p.
 \end{tikzcd}
 \caption{A diagram showing the interconnections among the main components of the \(p\)--primary part of the Ando--Hopkins--Rezk argument.}\label{MainAHRDiagram}
 \end{sidewaysfigure}
