restore footnote rule

--- a/preamble.tex
+++ b/preamble.tex
@@ -490,3 +490,10 @@
 \input{enumeratext}
 
 
+% restore the footnote rule
+\makeatletter
+\def\footnoterule{\kern-3\p@
+  \hrule \@width 2in \kern 2.6\p@} % the \hrule is .4pt high
+\makeatother
+
+
