--- a/cooperations.tex
+++ b/cooperations.tex
@@ -64,7 +64,7 @@ The \index{descent!object!unstable}\textit{unstable descent object} is the cosim
 \cdots
 \end{tikzcd}
 \right\}.\]
-Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.\footnote{A reader seeking visual stimulation can find unstable analogues of \Cref{HF2ASSFigure} in \cite{BPS}.}  The simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), and a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by: \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad}.\]
+Its totalization gives the \index{completion!unstable}\textit{unstable \(E\)--nilpotent completion of \(X\)}, and the associated filtration spectral sequence on homotopy is the \index{Adams spectral sequence!unstable}\textit{unstable Adams spectral sequence}.\footnote{A reader seeking visual stimulation can find unstable analogues of \Cref{HF2ASSFigure} in \cite{BPS}.}  The simplicial scheme \[\Ucontext{E} = \Spec \pi_0 \sheaf{UD}_E(S^0)\] forms the \index{context!unstable}\textit{unstable context} for \(E\), a space \(X\) gives rise to a quasicoherent sheaf over \(\Ucontext{E}\) by \[\Ucontext{E}(X) = (\pi_0 \sheaf{UD}_E(X))\widetilde{\quad},\] and there is a preferred system of sheaves \(\omega^{n/2} = \Ucontext{E}(S^n)\).
 \end{definition}
 
 The remainder of this Lecture will be spent trying to wrangle the information in \Cref{UASSDefinition}.  In the stable situation, we recognized that in favorable situations the homotopy groups of the descent object formed a cosimplicial module over a certain cosimplicial ring---or, equivalently, a \emph{Cartesian} sheaf over a certain simplicial scheme.  Furthermore, we found that the simplicial scheme itself had some arithmetic meaning, and that the \(E_2\)--page of the descent spectral sequence computed the cohomology of this sheaf.  We will find analogues of all of these results in the unstable setting, listed above in order from least to most difficult.
@@ -232,7 +232,7 @@ Under {\UGH}, we have a factorization \[\CatOf{Coalgebras}_{G}(E_0, -) = \CatOf{
 \end{proof}
 
 \begin{remark}[{cf.\ \Cref{AutGaHasStableCoopns}}]
-As in the stable case, the Hopf ring associated to a ring spectrum satisfying {\UFH} splits off a factor of \(B\N\) that tracks the grading\index{group scheme!multiplicative group, \(\Gm\)!action}, and the passage to the stable context in particular covers the localization \(B\N \to B\Gm\).
+As in the stable case, the Hopf ring associated to a ring spectrum satisfying {\UFH} splits off a factor of \(B\N\) that tracks the grading\index{group scheme!multiplicative group, \(\Gm\)!action}, and \(\omega^{*/2}\) can be thought of as a family of character sheaves for \(\N\).  Passing to the stable context covers the localization \(B\N \to B\Gm\).
 \end{remark}
 
 \begin{remark}[{\cite{Bauer}}]
