--- a/mo.tex
+++ b/mo.tex
@@ -367,7 +367,7 @@ H\F_2^* X & \from \mathcal A^* \otimes H\F_2^* X, \\
 \Spec \mathcal A_* \times X_{\HFtwo} & \xrightarrow{\alpha} X_{\HFtwo}.
 \end{align*}
 
-Having produced the action map \(\alpha\), we are now moved to study \(\alpha\) as well as the structure group \(\Spec \mathcal A_*\) itself.  Milnor works out the Hopf algebra structure of \(\mathcal A_*\) by defining elements \(\xi_j \in \mathcal A_*\) dual to the \index{Milnor primitive}\textit{\(j\){\th} Milnor primitive}, which are defined by \(Q_0 = 1\), by \(Q_1 = \Sq^1\), and thereafter by the iterated commutator \(Q_j = [Q_{j-1}, \Sq^{2^{j-1}}]\).  Taking \(X = \RP^n\) and \(x \in \HFtwo^1(\RP^n)\) the generator, he then observes two things: first, \(\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}\), and second, any other admissible sequence of squares applied to \(x\) vanishes for degree reasons.  It follows that \(Q_j x = x^{2^j}\) is the only family of operators that act nontrivially on \(x\), and from this we deduce the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j \text{\quad (in \(\HFtwo^* \RP^n\))}.\]  Noticing that we can take the limit \(n \to \infty\) to get a well-defined infinite sum, he then makes the following calculation, stable in \(n\):
+Having produced the action map \(\alpha\), we are now moved to study \(\alpha\) as well as the structure group \(\Spec \mathcal A_*\) itself.  Milnor works out the Hopf algebra structure of \(\mathcal A_*\) by defining elements \(\xi_j \in \mathcal A_*\) which are dual in the admissible basis to the \index{Milnor primitive}\textit{\(j\){\th} Milnor primitive}.  These elements are defined by \(Q_0 = 1\), by \(Q_1 = \Sq^1\), and thereafter by the iterated commutator \(Q_j = [Q_{j-1}, \Sq^{2^{j-1}}]\).  Taking \(X = \RP^n\) and \(x \in \HFtwo^1(\RP^n)\) the generator, he then observes two things: first, \(\Sq^{2^{j-1}} \cdots \Sq^{2^0} x = x^{2^j}\), and second, any other admissible sequence of squares applied to \(x\) vanishes for degree reasons.  It follows that \(Q_j x = x^{2^j}\) is the only family of operators that act nontrivially on \(x\), and from this we deduce the formula \[\lambda^*(x) = \sum_{j=0}^{\lfloor \log_2 n \rfloor} x^{2^j} \otimes \xi_j \text{\quad (in \(\HFtwo^* \RP^n\))}.\]  Noticing that we can take the limit \(n \to \infty\) to get a well-defined infinite sum, he then makes the following calculation, stable in \(n\):
 \begin{align*}
 (\lambda^* \otimes 1) \circ \lambda^*(x) & = (1 \otimes \Delta) \circ \lambda^*(x) \tag{coassociativity} \\
 (\lambda^* \otimes 1) \left( \sum_{j=0}^\infty x^{2^j} \otimes \xi_j \right) & = \\
