--- a/mo.tex
+++ b/mo.tex
@@ -382,7 +382,7 @@ from which it follows that \[\Delta \xi_m = \sum_{i+j=m} \xi_i^{2^j} \otimes \xi
 There is an isomorphism \[\mathcal A_* \cong \F_2[\xi_1, \xi_2, \ldots, \xi_j, \ldots].\]
 \end{theorem}
 \begin{proof}[Flippant proof]
-The definition of the elements \(\xi_j\) determines a Hopf algebra map \(\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*\) and hence a dual map \[\mathcal A^* \to \F_2[\xi_j \mid j \ge 1]^\vee.\]  This second map is injective: if it had a kernel, then this would produce a subalgebra of \(\mathcal A^*\) that acts trivially on \(\HFtwo^* \RP^\infty\), but any nonconstant member of \(\mathcal A^*\) acts nontrivially on \(\HFtwo^* (\RP^\infty)^{\times k}\) for \(k \gg 0\), and hence nontrivially on \(\HFtwo^* \RP^\infty\) itself.  Then, since \(\mathcal A_*\) and the polynomial algebra are both of graded finite type, Milnor can conclude his argument by counting how many elements he has produced, comparing against how many Adem and Cartan found (which we will do ourselves in \Cref{UnstableContextsSection}), and noting that he has exactly enough.\footnote{These elements turn out to be dual to the \textit{Milnor primitives} \(Q_j\), which are defined in the admissible basis by \(Q_0 = 1\), by \(Q_1 = \Sq^1\), and thereafter by the iterated commutator \(Q_j = [Q_{j-1}, \Sq^{2^{j-1}}]\).}
+The definition of the elements \(\xi_j\) determines a Hopf algebra map \(\F_2[\xi_1, \xi_2, \ldots] \to \mathcal A_*\) and hence a dual map \[\mathcal A^* \to \F_2[\xi_j \mid j \ge 1]^\vee.\]  This second map is injective: if it had a kernel, then this would produce a subalgebra of \(\mathcal A^*\) that acts trivially on \(\HFtwo^* \RP^\infty\), but any nonconstant member of \(\mathcal A^*\) acts nontrivially on \(\HFtwo^* (\RP^\infty)^{\times k}\) for \(k \gg 0\), and hence nontrivially on \(\HFtwo^* \RP^\infty\) itself.  Then, since \(\mathcal A_*\) and the polynomial algebra are both of graded finite type, Milnor can conclude his argument by counting how many elements he has produced, comparing against how many Adem and Cartan found (which we will do ourselves in \Cref{UnstableContextsSection}), and noting that he has exactly enough.\footnote{The elements dual to \(\xi_j\) can be explicitly identified as the \textit{Milnor primitives} \(Q_j\), defined by \(Q_1 = \Sq^1\) and by \(Q_j = [Q_{j-1}, \Sq^{2^{j-1}}]\) for \(j > 1\)~\cite[Corollary 2]{Milnor}.}
 \end{proof}
 
 We are now in a position to uncover the desired map \(\alpha^*\) from earlier.  In order to retell Milnor's story with \(\HFtwo P\) in place of \(\HFtwo\), note that there is a topological construction involving \(\HFtwo\) from which \(\mathcal A_*\) emerges: \[\mathcal A_* := \pi_*(\HFtwo \sm \HFtwo).\]  Performing substitution on this formula gives the \index{Steenrod algebra!periodified, dual}periodified dual Steenrod algebra: \[\mathcal AP_0 := \pi_0 (\HFtwo P \sm \HFtwo P) = \HFtwo P_0(\HFtwo P) \cong \mathcal A_*[\xi_0^\pm],\] and taking the \emph{continuous} linear dual of the action map
