--- a/powerops.tex
+++ b/powerops.tex
@@ -587,8 +587,8 @@ This decomposition is compatible with the perspective on homotopy theory taken u
 
 Our task in this section is to define \(\sheaf O^{\ss}\) on \(\widehat{\moduli{ell}^{\ss}}\), the infinitesimal neighborhood of the supersingular part of the topological enrichment in the larger moduli, and it suffices to specify its behavior on formal \'etale affines.  Since the moduli is itself \(0\)--dimensional, these are exactly the affine covers of the deformation spaces of the individual supersingular curves in the larger moduli \(\moduli{ell}\).  The following arithmetic result gives us a crucial reduction:
 
-\begin{theorem}[{Serre--Tate~\cite[Appendix 1]{KatzSTLocalModuli}}]\index{Serre--Tate theorem}
-The map \(\moduli{ell} \to \moduli{pdiv}(2)\) is formally \'etale, where \(\moduli{pdiv}(2)\) is the moduli of \(p\)--divisible groups of height \(2\).\footnote{In general, the Serre--Tate theorem states that \(\moduli{ab}^{d} \to \moduli{pdiv}(2d)\) is formally \'etale.} \qed
+\begin{theorem}[Serre--Tate]\index{Serre--Tate theorem}
+The map \(\moduli{ell} \to \moduli{pdiv}(2)\) is formally \'etale, where \(\moduli{pdiv}(2)\) is the moduli of \(p\)--divisible groups of height \(2\).\footnote{In general, \(\moduli{ab}^{d} \to \moduli{pdiv}(2d)\) is formally \'etale~\cite[Appendix 1]{KatzSTLocalModuli}.} \qed
 \end{theorem}
 \begin{lemma}[{\cite[Theorem 7.1.3]{BehrensLawson}}]
 The deformation theory of a connected \(p\)--divisible group of height \(d\) is isomorphic to the deformation theory of the associated formal group of height \(d\). \qed
