--- a/cooperations.tex
+++ b/cooperations.tex
@@ -101,7 +101,7 @@ Let \(E\) satisfy {\UFH}.  The associated Hopf ring \(E_0 \OS{E}{0}\) gives rise
 \end{definition}
 
 \begin{lemma}[{\cite[Theorem 6.17]{BCM}}]\label{HopfRingFromOneRingSpectrum}
-If an even-periodic ring spectrum \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra, the cosimplicial object \(\pi_0 \sheaf{UD}_E(X)\) is its cobar resolution under \(G\), and the \(E_2\)--page of the \index{Adams spectral sequence!unstable}unstable descent spectral sequence is presented as \[E_2^{s} = L^s\CatOf{Coalgebras}_G(E_0, E_0 X).\]
+If an even-periodic ring spectrum \(E\) satisfies {\UFH} and \(X\) is a space with \(E_* X\) a free \(E_*\)--module, then \(E_0 X\) forms a \(G\)--coalgebra, the cosimplicial object \(\pi_0 \sheaf{UD}_E(X)\) is its cobar resolution under \(G\), and the \(E_2\)--page of the \index{Adams spectral sequence!unstable}unstable descent spectral sequence is presented as \[E_2^{s} = R^s\CatOf{Coalgebras}_G(E_0, E_0 X).\]
 \end{lemma}
 \begin{proof}
 For \(X\) satisfying this freeness condition, there is a splitting \[E(X) \simeq \prod_\ell \OS{E}{n_\ell} \simeq \prod_\ell \OS{E}{0},\] where the second equivalence is by even-periodicity.  Since \(E\) satisfies {\UFH}, the K\"unneth spectral sequence for the comparison map \(\prod_\ell E(\OS{E}{0}) \to E(E(X))\) collapses to an equivalence, so that \[\pi_0 E(E(X)) \cong \pi_0 \left(\prod_\ell E(\OS{E}{0})\right) \cong E_0(\OS{E}{0}) \otimes_{E_0} E(X).\]  Continuing inductively in this way, the levelwise homotopy of the entire unstable descent object \(\sheaf{UD}_E(X)\) can be identified as the cobar complex for \(G\), and the structure maps of \(\pi_0 \sheaf{UD}_E(X)[\le 2]\) endow \(E_0 X\) itself with the structure of a \(G\)--coalgebra.
