relent and define a'_{jk} in 4.2.5

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -312,9 +312,9 @@ For a coaugmented \(R\)--coalgebra \(A\) and an \(S\)--algebra \(B\), the \index
     \item Accordingly, we have \[a [b' + b''] = \sum_j a'_j[b'] \ast a''_j[b''], \quad a [b' b''] = \sum_j a'_j[b'] \circ a''_j[b''].\]
     \item Thinking of the antipode as \(\chi(h) = [-1] \circ h\) gives \[\chi(a[b]) = a[-b].\]
     \item Lastly, multiplication by zero gives \[a[0] = \eta\eps(a)[0].\]
-\enumeratext{Noting the similarity of the second and fourth relations to those imposed in \Cref{MappingSchemeStatement}, there are two additional families of relations we might consider:}
+\enumeratext{Noting the similarity of the second and fourth relations to those imposed in \Cref{MappingSchemeStatement}, there are two additional families of relations we might consider in the presence of Hopf algebra structures on \(A\) and \(B\):}
     \item The dual to the fourth relation is \[(\eta(1))[b] = [\eta\eps(b)].\]
-    \item The dual to the second relation requires the presence of Hopf algebra structures on \(A\) and \(B\).  In this setting, for \(a', a'' \in A\) and for \(b \in B\) with diagonal given by \(\Delta(b) = \sum_j b'_j \otimes b''_j\), the dual relation is then \[(a'a'')[b] = \bigast_j \sum_k a_{jk}'[b'_j] \circ a_{jk}''[b''_j].\]
+    \item The dual to the second relation is more complicated.  For \(a', a'' \in A\) and for \(b \in B\) with diagonal given by \(\Delta(b) = \sum_{j=1}^n b'_j \otimes b''_j\), the dual relation is then \[(a'a'')[b] = \bigast_j \sum_k a_{jk}'[b'_j] \circ a_{jk}''[b''_j],\] where \(\Delta^{n-1} a' = \sum_k a_{1k}' \otimes \cdots \otimes a_{jk}' \otimes \cdots \otimes a_{nk}'\), and similarly for \(a''_{jk}\).
 \end{enumerate}
 Imposing these additional relations, we call the resulting quotient Hopf ring the \index{Hopf ring!Kronecker}\textit{Kronecker Hopf ring--ring}, and we denote it by \(A_{R[S]}^{\circulatearrows}[B]\).
 \end{definition}
