more specific Laures-Schuster citation

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -43,7 +43,7 @@ Our first major project in this text, which culminated in \Cref{MOSplitsIntoHF2s
     \item These results then assemble to yield a splitting at the level of \(2\)--complete spectra through Adams spectral sequence methods.\footnote{Replacing \(2\) by \(p\) everywhere, one can also produce odd-primary results.}
 \end{enumerate}
 
-For instance, by studying the homology of \(M\SO\), one finds that the unit class in \(\HFtwo_* M\SO\) generates the submodule~\cite[Lemma 20.38]{Switzer} \[1 \cdot \mathcal A_* \mmod (\Sq^1) \subseteq \HFtwo_* M\SO,\] and an appropriate generalization of Milnor--Moore then gives a splitting \[M\SO \simeq \left( \bigvee_j \Susp^{n_j} \HFtwo \right) \vee \left( \bigvee_k \Susp^{m_k} H\Z \right).\]  Similarly, the homology of \(M\Spin\) reveals an inclusion~\cite{ABS,ABP,GiambalvoPengelley} \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2) \subseteq \HFtwo_* M\Spin,\] and a further generalization of Milnor--Moore ultimately produces a splitting\footnote{However, this time the splitting is not one of ring spectra.} \[M\Spin \simeq \left( \bigvee_j kO[n_j, \infty)\right) \vee \left( \bigvee_k \Susp^{m_k} H\F_2 \right).\]  When studying \(M\String\), one finds that there is an inclusion \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2, \Sq^4) \subseteq \HFtwo_* M\String,\] but at this point the Adams spectral sequence becomes too intricate to analyze effectively and no analogous splitting of \(M\String\) has yet been produced.\footnote{See, however, recent work of Laures--Schuster~\cite{LauresSchuster}.}\footnote{There are also \(p\)--local complex analogues of these results:
+For instance, by studying the homology of \(M\SO\), one finds that the unit class in \(\HFtwo_* M\SO\) generates the submodule~\cite[Lemma 20.38]{Switzer} \[1 \cdot \mathcal A_* \mmod (\Sq^1) \subseteq \HFtwo_* M\SO,\] and an appropriate generalization of Milnor--Moore then gives a splitting \[M\SO \simeq \left( \bigvee_j \Susp^{n_j} \HFtwo \right) \vee \left( \bigvee_k \Susp^{m_k} H\Z \right).\]  Similarly, the homology of \(M\Spin\) reveals an inclusion~\cite{ABS,ABP,GiambalvoPengelley} \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2) \subseteq \HFtwo_* M\Spin,\] and a further generalization of Milnor--Moore ultimately produces a splitting\footnote{However, this time the splitting is not one of ring spectra.} \[M\Spin \simeq \left( \bigvee_j kO[n_j, \infty)\right) \vee \left( \bigvee_k \Susp^{m_k} H\F_2 \right).\]  When studying \(M\String\), one finds that there is an inclusion \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2, \Sq^4) \subseteq \HFtwo_* M\String,\] but at this point the Adams spectral sequence becomes too intricate to analyze effectively and no analogous splitting of \(M\String\) has yet been produced.\footnote{See, however, recent work of Laures--Schuster~\cite[Section 2]{LauresSchuster}.}\footnote{There are also \(p\)--local complex analogues of these results:
 \[
 MU \simeq \bigvee_j \Susp^{n_j} BP, \quad
 M\SU \simeq \left(\bigvee_j \Susp^{n_j} BP\right) \vee \left(\bigvee_k \Susp^{m_k} BoP \right),
