add a thompson citation

--- a/main.bib
+++ b/main.bib
@@ -4008,6 +4008,20 @@ MRREVIEWER = {Stewart B. Priddy},
        URL = {http://dx.doi.org/10.1093/qmath/31.4.507},
 }
 
+@ARTICLE{Thompson,
+   author = {{Thompson}, R.},
+    title = "{An Unstable Change of Rings for Morava E-Theory}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1409.3890},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology, 55N20, 55T15, 55Q51},
+     year = 2014,
+    month = sep,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1409.3890T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article {Torii5,
     AUTHOR = {Torii, Takeshi},
      TITLE = {{$K(n)$}-localization of the {$K(n+1)$}-local {$E_{n+1}$}-{A}dams spectral sequences},
