--- a/powerops.tex
+++ b/powerops.tex
@@ -241,7 +241,7 @@ Rezk has shown that the \(E_\infty\) descent object for Morava \(E\)--theory is,
 
 In this subsection, we seek a comparison of the natural \(E_\infty\) context and the \index{context!unstable}unstable context considered in \Cref{UnstableContextsSection}.  Our model for the unstable context in \Cref{UnstableAlgebraicModelSection} focuses on the effect of unstable operations on the cohomology of \(\CP^\infty\), as summarized in the following result:
 
-\begin{lemma}[{mild extension of \Cref{LEFTUnstableCooperations} along the lines of \Cref{HopfRingForEBP}}]\label{UnstableEthyCooperations}
+\begin{lemma}[{mild extension of \Cref{LEFTUnstableCooperations} along the lines of \Cref{HopfRingForEBP}; cf.\ also \cite[Theorem 1.1]{Thompson}}]\label{UnstableEthyCooperations}
 There is an isomorphism \[\Spec Q^* \pi_* L_\Gamma(E \sm E) \cong \InternalHom{FormalGroups}(\CP^\infty_E, \CP^\infty_E). \qed\]
 \end{lemma}
 
