fix obnoxious double-colon

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -464,7 +464,7 @@ The functor \(i\co \CatOf{Rings} \to \CatOf{HopfRings}\) defined by \[i(R) = \Z[
 \CatOf{HopfRings} \arrow[shift left=0.2\baselineskip, "Q^*"]{r} & \CatOf{Rings} \arrow[shift left=0.2\baselineskip, "i"]{l}.
 \end{tikzcd}
 \end{center}
-Moreover, \(i\) is an embedding: \(c\co Q^* i R \xrightarrow\cong R\). \qed
+Moreover, \(i\) is an embedding, as \(c\co Q^* i R \xrightarrow\cong R\). \qed
 \end{lemma}
 
 We are thus algebraically motivated to understand \(\Spec Q^* \AA(F, E)\), as this encodes \(\SpH \AA(F, E)\) on the subcategory of classical rings selected by \(i\).
