--- a/main.bib
+++ b/main.bib
@@ -1193,6 +1193,19 @@ MRREVIEWER = {Pierre Deligne},
 MRREVIEWER = {Donald M. Davis},
 }
 
+@article{Fox,
+title = "The construction of cofree coalgebras",
+journal = "Journal of Pure and Applied Algebra",
+volume = "84",
+number = "2",
+pages = "191 - 198",
+year = "1993",
+issn = "0022-4049",
+doi = "https://doi.org/10.1016/0022-4049(93)90038-U",
+url = "http://www.sciencedirect.com/science/article/pii/002240499390038U",
+author = "Thomas F. Fox"
+}
+
 @article{GanterPowerOpnsInTateKthy,
   title={Power operations in orbifold Tate $ K $-theory},
   author={Ganter, Nora and others},
