--- a/cooperations.tex
+++ b/cooperations.tex
@@ -469,7 +469,7 @@ c\co Q^* R[S] & \to S, \\
 The functor \(i\) is an embedding.
 \end{corollary}
 \begin{proof}
-From the perspective of \(i\), the Hopf ring-ring \(R[\sheaf O_{\mathbb A^1}]\) plays the role of an affine line: \[\SpH(R[\sheaf O_{\mathbb A^1}])(iA) = (\Spec \sheaf O_{\mathbb A^1})(A) = \mathbb A^1(A) = A.\]  We see that we can functorially recover \(A\) from \(iA\).
+From the perspective of \(i\), the Hopf ring-ring \(R[\sheaf O_{\mathbb A^1}]\) plays the role of an affine line: \[(\SpH R[\sheaf O_{\mathbb A^1}])(iA) = (\Spec \sheaf O_{\mathbb A^1})(A) = \mathbb A^1(A) = A.\]  We see that we can functorially recover \(A\) from \(iA\).
 \end{proof}
 
 
