fix clumsy typesetting in proof of A.1.5

--- a/characters.tex
+++ b/characters.tex
@@ -288,11 +288,10 @@ S_k &= \im \big (\Lk^* \setminus 0 \rightarrow \G[p^k](E^0(B\Lk)) \big ) \\ &= \
 Inverting the determinant of \(u^*\) is equivalent to inverting \(S_k\).
 \end{lemma}
 \begin{proof}
-For \(\bar{i} = (i_1, \ldots, i_d) \in \Lk^*\), let
+For \(\bar{i} = (i_1, \ldots, i_d) \in \Lk^*\), set
 \[
 [\bar{i}](\bar{x}) = [i_1]_{\G}(x_1) +_{\G} \ldots +_{\G} [i_d]_{\G}(x_d).
 \]
-
 The matrix defining \(u^*\) is given by the Vandermonde matrix
 \[
 \left(
@@ -304,7 +303,6 @@ The matrix defining \(u^*\) is given by the Vandermonde matrix
 \end{array} \right),
 \]
 where \(\{\bar{j_1},\ldots,\bar{j_{p^k}}\} = \Lk^*\).
-
 The determinant of this matrix is
 \[
 \prod_{1 \leq s < t \leq p^k} ([\bar{j_t}](\bar{x}) - [\bar{j_s}](\bar{x})).
@@ -314,7 +312,6 @@ It is a basic fact of subtraction for formal group laws that
 x -_{\G} y = v(x-y)
 \]
 for a unit \(v\). 
-
 Thus the determinant is, up to multiplication by a unit, 
 \begin{align*}
 \prod_{1 \leq s < t \leq p^k} ([\bar{j_t}](\bar{x}) -_{\G} [\bar{j_s}](\bar{x})) & = \prod_{1 \leq s < t \leq p^k} ([\bar{j_t} - \bar{j_s}](\bar{x})) \\
