fix awkward vertical spacing coming from \left\right + tikzcd

--- a/powerops.tex
+++ b/powerops.tex
@@ -207,7 +207,7 @@ Related methods also describe the abelian context:
 
 \begin{theorem}[{\cite[pg.\ 45]{StricklandFPFP}}]
 For a finite abelian group \(A\), there is a diagram
-\begin{center}
+\begin{center}\vspace{-\baselineskip}
 \begin{tikzcd}[column sep=0.7em]
 \left.\Spf E^0 BA \middle/ \left( \sum_{\substack{a \in A \\ a \ne 0}} \operatorname{ann}(a) \right) \right. \arrow{r} \arrow[equal]{d} & \Spf E^0 BA / I_{\Tr} \arrow{r} & \Spf E^0 BA \arrow[equal]{d} \\
 \Level(A^*, \CP^\infty_E) \arrow{rr} & & \InternalHom{FormalGroups}(A^*, \CP^\infty_E),
